<resources>
    <string name="app_name">GithubProfile</string>

    <string name="search_hint"><i>Search</i></string>
    <string name="search_icon">Search Icon</string>

    <string name="no_connection">No internet connection</string>

    <string name="name">Name</string>
    <string name="company">Company</string>
    <string name="blog">Blog</string>
    <string name="notes">Notes</string>
    <string name="save">Save</string>
    <string name="error_message">Error !! Please connect to the Internet.</string>
</resources>