<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bones="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewmodel"
            type="com.yuzu.githubprofile.viewmodel.UserDetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_back"
                        android:layout_centerVertical="true"/>

                    <TextView
                        android:id="@+id/login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="20sp"
                        android:text="@{viewmodel.userDetail.login}"
                        android:layout_centerVertical="true"
                        android:layout_centerHorizontal="true"/>
                </RelativeLayout>
            </androidx.appcompat.widget.Toolbar>

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="100dp"
                app:cardBackgroundColor="@color/md_white_1000"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                app:layout_constraintBottom_toTopOf="@+id/name_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardCornerRadius="100dp">

                    <ImageView
                        android:id="@+id/upload_logo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_logo_upload"/>

                    <ImageView
                        android:id="@+id/avatar"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:layout_gravity="center"/>

                </androidx.cardview.widget.CardView>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/name"
                    android:textSize="14sp"
                    android:textColor="@color/md_grey_500"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:inputType="text"
                    android:imeOptions="actionUnspecified"
                    style="@style/EditTextCustom"
                    android:text="@{viewmodel.userDetail.name}"
                    android:clickable="false"
                    android:focusable="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/company_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/name_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/company"
                    android:textSize="14sp"
                    android:textColor="@color/md_grey_500"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/company"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:inputType="text"
                    android:imeOptions="actionUnspecified"
                    style="@style/EditTextCustom"
                    android:text="@{viewmodel.userDetail.company}"
                    android:clickable="false"
                    android:focusable="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/blog_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/company_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/blog"
                    android:textSize="14sp"
                    android:textColor="@color/md_grey_500"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/blog"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:inputType="text"
                    android:imeOptions="actionUnspecified"
                    style="@style/EditTextCustom"
                    android:text="@{viewmodel.userDetail.blog}"
                    android:clickable="false"
                    android:focusable="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/notes_layout"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/blog_layout"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold"
                    android:text="@string/notes"
                    android:textSize="14sp"
                    android:textColor="@color/md_grey_500"
                    android:layout_marginBottom="10dp"/>

                <EditText
                    android:id="@+id/notes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:textColorHint="@color/md_white_100"
                    android:inputType="text"
                    android:maxLines="3"
                    android:imeOptions="actionUnspecified"
                    android:drawableTint="@color/colorPrimaryDark"
                    style="@style/EditTextCustom"
                    android:clickable="false"
                    android:focusable="false"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>